# start

./: .gitignore  CMakeLists.txt
Project/: CMakeLists.txt  MachienApp.cpp  MachienApp.h  MachienBuffer.cpp  MachienBuffer.h  MachienCamera.cpp  MachienCamera.h  MachienDescriptors.cpp  MachienDescriptors.h  MachienDevice.cpp  MachienDevice.h  MachienFrameInfo.h  MachienKeyboard.cpp  MachienKeyboard.h  MachienModel.cpp  MachienModel.h  MachienObject.cpp  MachienObject.h  MachienObject2D.cpp  MachienObject2D.h  MachienPipeline.cpp  MachienPipeline.h  MachienRenderSystem.cpp  MachienRenderSystem.h  MachienRenderer.cpp  MachienRenderer.h  MachienSwapChain.cpp  MachienSwapChain.h  MachienTexture.cpp  MachienTexture.h  MachienUtils.h  MachienWindow.cpp  MachienWindow.h  main.cpp
Project/resources/: ltg.jfif
Project/shaders/: 2dShader.frag  2dShader.vert  shader.frag  shader.vert
